src/objects/L2D_Trigger_Answer__c.object
<CustomObject>
    <description>L2D Trigger Answers</description>
    <fields>
        <fullName>Answer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Answer_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_L2D_Trigger_Answer_Ext_ID__c</fullName>
        <description>External Id - Used for Data Migration</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>L2D Trigger Answer Ext ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Level_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Help</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2D_Trigger__c</fullName>
        <description>L2D Trigger Answer</description>
        <label>L2D Trigger</label>
        <referenceTo>CLM_L2D_Trigger__c</referenceTo>
        <relationshipLabel>L2D Trigger Answers</relationshipLabel>
        <relationshipName>L2D_Trigger_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Level</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>L2D Trigger Answer</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>L2D Trigger Answer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>L2D Trigger Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>